Update azure-pipelines.yml for Azure Pipelines

--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -40,3 +40,8 @@ stages:
         solution: '**/*.sln'
         buildConfiguration: 'Release'
 
+
+- stage: "Deploy"
+  displayName: "Deploy Artifactory"
+
+- template: pipeline-templates/build-dotnetcore-nuget.yml@templates
