Criado interface de marcação para override em metodo para gerar token

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,6 +11,7 @@
     <Copyright>Copyright ©2022 $(Company)</Copyright>
     <Product>Libraries with common implementations, with separation of responsibilities between their projects using Abstractions.</Product>
     <License>https://github.com/lzocateli00/Nuuvify.CommonPack/blob/main/LICENSE</License>
+    <license>LICENSE</license>
     <PackageProjectUrl>https://github.com/lzocateli00/Nuuvify.CommonPack</PackageProjectUrl>
     <PackageIcon>logonuuvify.jpg</PackageIcon>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
