Ajustes na tag de licenciamento

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -34,7 +34,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="../LICENSE" Pack="true" PackagePath="" />
+    <None Include="../../LICENSE" Pack="true" PackagePath="" />
     <None Include="../../Images/logonuuvify.jpg" Pack="true" PackagePath="" />
   </ItemGroup>
 
