--- a/src/Nuuvify.CommonPack.EF.Exceptions.Db2/Nuuvify.CommonPack.EF.Exceptions.Db2.csproj
+++ b/src/Nuuvify.CommonPack.EF.Exceptions.Db2/Nuuvify.CommonPack.EF.Exceptions.Db2.csproj
@@ -10,7 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="IBM.Data.DB2.Core" Version="3.1.0.400" />
+        <PackageReference Include="IBM.Data.DB2.Core" Version="3.1.0.500" Condition="'$(os)' == 'Windows_NT'" />
+        <PackageReference Include="IBM.Data.DB2.Core-lnx" Version="3.1.0.500" Condition="'$(os)' == 'UNIX'" />
     </ItemGroup>
 
     <ItemGroup>
