--- a/src/Nuuvify.CommonPack.Extensions/Nuuvify.CommonPack.Extensions.csproj
+++ b/src/Nuuvify.CommonPack.Extensions/Nuuvify.CommonPack.Extensions.csproj
@@ -4,8 +4,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>
-      This library implements Notification Pattern, which allows passing notifications between projects. <br/>
-      Here there are also several extension methods that help handle null lists, special characters in strings, <br/>
+      This library implements Notification Pattern, which allows passing notifications between projects.
+      <br />
+      Here there are also several extension methods that help handle null lists, special characters in strings,
+      <br />
       among other useful things.
     </Description>
   </PropertyGroup>
@@ -13,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.26" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
