--- a/src/Nuuvify.CommonPack.Middleware/Nuuvify.CommonPack.Middleware.csproj
+++ b/src/Nuuvify.CommonPack.Middleware/Nuuvify.CommonPack.Middleware.csproj
@@ -12,8 +12,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.30" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.31" />
   </ItemGroup>
 
   <ItemGroup>
