--- a/src/Nuuvify.CommonPack.AzureStorage/Nuuvify.CommonPack.AzureStorage.csproj
+++ b/src/Nuuvify.CommonPack.AzureStorage/Nuuvify.CommonPack.AzureStorage.csproj
@@ -9,12 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.31" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.32" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nuuvify.CommonPack.AzureStorage.Abstraction\Nuuvify.CommonPack.AzureStorage.Abstraction.csproj" />
+    <ProjectReference
+      Include="..\Nuuvify.CommonPack.AzureStorage.Abstraction\Nuuvify.CommonPack.AzureStorage.Abstraction.csproj" />
   </ItemGroup>
 
 </Project>
