--- a/src/Nuuvify.CommonPack.EF.Exceptions.Common/Nuuvify.CommonPack.EF.Exceptions.Common.csproj
+++ b/src/Nuuvify.CommonPack.EF.Exceptions.Common/Nuuvify.CommonPack.EF.Exceptions.Common.csproj
@@ -3,15 +3,20 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <PackageTags>EntityFramework EF Exception SqlServer PostgreSQL MySql EntityFrameworkCore entity-framework-core EFCore Data Database</PackageTags>
+        <PackageTags>EntityFramework EF Exception SqlServer PostgreSQL MySql EntityFrameworkCore
+            entity-framework-core EFCore Data Database</PackageTags>
         <PackageReleaseNotes>Populate Entries property of the exceptions</PackageReleaseNotes>
-        <Description>Handle database errors easily when working with Entity Framework Core. Catch specific exceptions such as UniqueConstraintException, CannotInsertNullException, MaxLengthExceededException, NumericOverflowException or ReferenceConstraintException instead of generic DbUpdateException
+        <Description>Handle database errors easily when working with Entity Framework Core. Catch
+            specific exceptions such as UniqueConstraintException, CannotInsertNullException,
+            MaxLengthExceededException, NumericOverflowException or ReferenceConstraintException
+            instead of generic DbUpdateException
 
-      This is a base package for database specific packages. Install one of the specific packages instead of this</Description>
+            This is a base package for database specific packages. Install one of the specific
+            packages instead of this</Description>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.31" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
     </ItemGroup>
 
 </Project>
