--- a/src/Nuuvify.CommonPack.Middleware.Abstraction/Nuuvify.CommonPack.Middleware.Abstraction.csproj
+++ b/src/Nuuvify.CommonPack.Middleware.Abstraction/Nuuvify.CommonPack.Middleware.Abstraction.csproj
@@ -5,15 +5,18 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>
       Middlewares e filtros customizados, deve ser baixado no projeto IoC
-      HandlingHeadersMiddleware - Inclui a versão da aplicação e do assembly no header da request, também loga o conteudo da request
+      HandlingHeadersMiddleware - Inclui a versão da aplicação e do assembly no header da request,
+      também loga o conteudo da request
       GlobalHandleException - Captura e loga as exceptions de forma global
       ValidateModelAttribute - Retorna os erros da ModelState de forma padronizada
-      RequestConfiguration - Utilizada pelo LOG e também pelo HandlingHeadersMiddleware para criar log com contexto
+      RequestConfiguration - Utilizada pelo LOG e também pelo HandlingHeadersMiddleware para criar
+      log com contexto
     </Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"
+      Version="3.1.32" />
   </ItemGroup>
 
 </Project>
