--- a/src/Nuuvify.CommonPack.NLog/Nuuvify.CommonPack.NLog.csproj
+++ b/src/Nuuvify.CommonPack.NLog/Nuuvify.CommonPack.NLog.csproj
@@ -4,19 +4,20 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Description>
-      Implementação de Log customizado com NLog e ILogger 
+      Implementação de Log customizado com NLog e ILogger
     </Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.31" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.32" />
     <PackageReference Include="NLog.Extensions.Hosting" Version="1.7.5" />
     <PackageReference Include="NLog" Version="4.7.15" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nuuvify.CommonPack.Middleware.Abstraction\Nuuvify.CommonPack.Middleware.Abstraction.csproj" />
+    <ProjectReference
+      Include="..\Nuuvify.CommonPack.Middleware.Abstraction\Nuuvify.CommonPack.Middleware.Abstraction.csproj" />
   </ItemGroup>
 
   <ItemGroup Label="Packaging">
