--- a/src/Nuuvify.CommonPack.Security.JwtCredentials/Nuuvify.CommonPack.Security.JwtCredentials.csproj
+++ b/src/Nuuvify.CommonPack.Security.JwtCredentials/Nuuvify.CommonPack.Security.JwtCredentials.csproj
@@ -9,15 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="3.1.31" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.32" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.20.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.20.0" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
+    <ProjectReference
+      Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
   </ItemGroup>
 
   <ItemGroup>
