--- a/src/Nuuvify.CommonPack.Security.JwtStore.Ef/Nuuvify.CommonPack.Security.JwtStore.Ef.csproj
+++ b/src/Nuuvify.CommonPack.Security.JwtStore.Ef/Nuuvify.CommonPack.Security.JwtStore.Ef.csproj
@@ -4,18 +4,20 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <Description>
-            Armazena a chave privada para geracao de token em banco de dados e fornece uma chave publica
+            Armazena a chave privada para geracao de token em banco de dados e fornece uma chave
+            publica
             para que seja validado pelos clients.
             Essa biblioteca destinase apenas a aplicação que fornece um token.
         </Description>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.31" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Nuuvify.CommonPack.Security.JwtCredentials\Nuuvify.CommonPack.Security.JwtCredentials.csproj" />
+        <ProjectReference
+            Include="..\Nuuvify.CommonPack.Security.JwtCredentials\Nuuvify.CommonPack.Security.JwtCredentials.csproj" />
     </ItemGroup>
 
 
