--- a/src/Nuuvify.CommonPack.Security/Nuuvify.CommonPack.Security.csproj
+++ b/src/Nuuvify.CommonPack.Security/Nuuvify.CommonPack.Security.csproj
@@ -4,21 +4,24 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Description>
-      Implementa Autorização e Autenticação com OAuth2, JWT - deve ser baixado no projeto IoC, aqui não contempla OpenId
+      Implementa Autorização e Autenticação com OAuth2, JWT - deve ser baixado no projeto IoC, aqui
+      não contempla OpenId
       que esta em outra Lib
     </Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="3.1.31" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.31" />
-    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.31" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"
+      Version="3.1.32" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.32" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
+    <ProjectReference
+      Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
   </ItemGroup>
 
   <ItemGroup>
