--- a/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
+++ b/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
@@ -4,9 +4,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>
-      Possui classes para padronizar a comunicação com apis externas, padronizando inclusive o retorno da request.
-      A classe BaseStandardHttpClient deverá ser implementada como herança, em uma classe especifica no seu projeto de Infra.Data, siga as instruções contidas no Assempbly
-      Para chamadas de apis externas não , não utilize a classe BaseStandardHttpClient, apenas utilize IStandardHttpClient, e deserealize o retorno conforme o fornecedor
+      Possui classes para padronizar a comunicação com apis externas, padronizando inclusive o
+      retorno da request.
+      A classe BaseStandardHttpClient deverá ser implementada como herança, em uma classe especifica
+      no seu projeto de Infra.Data, siga as instruções contidas no Assempbly
+      Para chamadas de apis externas não , não utilize a classe BaseStandardHttpClient, apenas
+      utilize IStandardHttpClient, e deserealize o retorno conforme o fornecedor
       da api pede.
     </Description>
   </PropertyGroup>
@@ -14,11 +17,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.32" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
+    <ProjectReference
+      Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
   </ItemGroup>
 
 </Project>
