--- a/test/Nuuvify.CommonPack.HealthCheck.xTest/Nuuvify.CommonPack.HealthCheck.xTest.csproj
+++ b/test/Nuuvify.CommonPack.HealthCheck.xTest/Nuuvify.CommonPack.HealthCheck.xTest.csproj
@@ -6,13 +6,15 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.31" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"
+      Version="3.1.32" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.HealthCheck\Nuuvify.CommonPack.HealthCheck.csproj" />
+    <ProjectReference
+      Include="..\..\src\Nuuvify.CommonPack.HealthCheck\Nuuvify.CommonPack.HealthCheck.csproj" />
   </ItemGroup>
 
 
