--- a/test/Nuuvify.CommonPack.Security.xTest/Nuuvify.CommonPack.Security.xTest.csproj
+++ b/test/Nuuvify.CommonPack.Security.xTest/Nuuvify.CommonPack.Security.xTest.csproj
@@ -6,11 +6,12 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.32" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Security\Nuuvify.CommonPack.Security.csproj" />
+    <ProjectReference
+      Include="..\..\src\Nuuvify.CommonPack.Security\Nuuvify.CommonPack.Security.csproj" />
   </ItemGroup>
 
   <Target Name="CopyConfigFile" AfterTargets="AfterBuild">
