--- a/test/Nuuvify.CommonPack.StandardHttpClient.xTest/Nuuvify.CommonPack.StandardHttpClient.xTest.csproj
+++ b/test/Nuuvify.CommonPack.StandardHttpClient.xTest/Nuuvify.CommonPack.StandardHttpClient.xTest.csproj
@@ -6,14 +6,16 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.31" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.31" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.31" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.32" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.StandardHttpClient\Nuuvify.CommonPack.StandardHttpClient.csproj" />
-    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
+    <ProjectReference
+      Include="..\..\src\Nuuvify.CommonPack.StandardHttpClient\Nuuvify.CommonPack.StandardHttpClient.csproj" />
+    <ProjectReference
+      Include="..\..\src\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
   </ItemGroup>
 
   <Target Name="CopyConfigFile" AfterTargets="AfterBuild">
