--- a/pipelines/azure-pipelines.yml
+++ b/pipelines/azure-pipelines.yml
@@ -39,5 +39,6 @@ stages:
       parameters:
         solution: '**/*.sln'
         buildConfiguration: 'Release'
+        repositoryName: 'Nuuvify.CommonPack'
 
 - template: pipeline-templates/deploy-common-dotnetcore-nuget.yml@templates
