--- a/src/Nuuvify.CommonPack.UnitOfWork/Nuuvify.CommonPack.UnitOfWork.csproj
+++ b/src/Nuuvify.CommonPack.UnitOfWork/Nuuvify.CommonPack.UnitOfWork.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
@@ -9,11 +9,6 @@
       Deve ser instalada no projeto Infra.IoC
     </Description>
   </PropertyGroup>
-
-
-  <ItemGroup>
-    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.19" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Nuuvify.CommonPack.UnitOfWork.Abstraction\Nuuvify.CommonPack.UnitOfWork.Abstraction.csproj" />
