--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -60,12 +60,12 @@
 				"terminal.integrated.defaultProfile.linux": "zsh"
 			},
 			"extensions": [
-				"ms-azuretools.vscode-docker",
 				"ms-dotnettools.vscodeintellicode-csharp",
+				"ms-dotnettools.csharp",
+				"ms-azuretools.vscode-docker",
 				"ms-vscode.powershell",
 				"ms-vsliveshare.vsliveshare",
-				"ms-dotnettools.csdevkit",
-				"ms-dotnettools.csharp",
+				// "ms-dotnettools.csdevkit",
 				"ecmel.vscode-html-css",
 				"adrianwilczynski.asp-net-core-snippet-pack",
 				"k--kato.docomment",
