--- a/test/Nuuvify.CommonPack.Email.xTest/Nuuvify.CommonPack.Email.xTest.csproj
+++ b/test/Nuuvify.CommonPack.Email.xTest/Nuuvify.CommonPack.Email.xTest.csproj
@@ -7,8 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.32" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"
-      Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.32" />
   </ItemGroup>
 
 
