--- a/test/Nuuvify.CommonPack.StandardHttpClient.xTest/Nuuvify.CommonPack.StandardHttpClient.xTest.csproj
+++ b/test/Nuuvify.CommonPack.StandardHttpClient.xTest/Nuuvify.CommonPack.StandardHttpClient.xTest.csproj
@@ -12,10 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\..\src\Nuuvify.CommonPack.StandardHttpClient\Nuuvify.CommonPack.StandardHttpClient.csproj" />
-    <ProjectReference
-      Include="..\..\src\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.StandardHttpClient\Nuuvify.CommonPack.StandardHttpClient.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
   </ItemGroup>
 
   <Target Name="CopyConfigFile" AfterTargets="AfterBuild">
