--- a/test/Nuuvify.CommonPack.UnitOfWork.Oracle.xTest/Nuuvify.CommonPack.UnitOfWork.Oracle.xTest.csproj
+++ b/test/Nuuvify.CommonPack.UnitOfWork.Oracle.xTest/Nuuvify.CommonPack.UnitOfWork.Oracle.xTest.csproj
@@ -23,17 +23,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\..\src\Nuuvify.CommonPack.AutoHistory\Nuuvify.CommonPack.AutoHistory.csproj" />
-    <ProjectReference
-      Include="..\..\src\Nuuvify.CommonPack.Extensions\Nuuvify.CommonPack.Extensions.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.AutoHistory\Nuuvify.CommonPack.AutoHistory.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Extensions\Nuuvify.CommonPack.Extensions.csproj" />
     <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Domain\Nuuvify.CommonPack.Domain.csproj" />
-    <ProjectReference
-      Include="..\..\src\Nuuvify.CommonPack.Middleware.Abstraction\Nuuvify.CommonPack.Middleware.Abstraction.csproj" />
-    <ProjectReference
-      Include="..\..\src\Nuuvify.CommonPack.UnitOfWork\Nuuvify.CommonPack.UnitOfWork.csproj" />
-    <ProjectReference
-      Include="..\..\src\Nuuvify.CommonPack.EF.Exceptions.Oracle\Nuuvify.CommonPack.EF.Exceptions.Oracle.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Middleware.Abstraction\Nuuvify.CommonPack.Middleware.Abstraction.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.UnitOfWork\Nuuvify.CommonPack.UnitOfWork.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.EF.Exceptions.Oracle\Nuuvify.CommonPack.EF.Exceptions.Oracle.csproj" />
   </ItemGroup>
 
   <Target Name="CopyConfigFile" AfterTargets="AfterBuild">
