Resolvido o problema de dependencia de versões do .net

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,10 +25,15 @@
 	},
 
 	"mounts": [
-		"source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
-		"source=/${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,consistency=cached",
-		"source=/${localEnv:HOME}/.config/atomic.omp.json,target=/root/.config/atomic.omp.json,type=bind,consistency=cached"
-		// "source=${localEnv:APPDATA}\\NuGet\\linux\\NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
+		// Se estiver utilizando Linux ou WSL2 desmarque essas linhas
+		// "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
+		// "source=/${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,consistency=cached",
+		//"source=/${localEnv:HOME}/.config/atomic.omp.json,target=/root/.config/atomic.omp.json,type=bind,consistency=cached"
+		
+		// Se estiver usando Windows ou Docker Desktop, desmarque essas linhas
+		"source=${localEnv:APPDATA}/NuGet/linux/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
+		"source=${localEnv:USERPROFILE}/.ssh,target=/root/.ssh,type=bind,consistency=cached"
+		
 		// "source=${localEnv:APPDATA}\\Microsoft\\UserSecrets,target=/root/.microsoft/usersecrets,type=bind,consistency=cached"
 	],
 
