--- a/src/Nuuvify.CommonPack.EF.Exceptions.Oracle/Nuuvify.CommonPack.EF.Exceptions.Oracle.csproj
+++ b/src/Nuuvify.CommonPack.EF.Exceptions.Oracle/Nuuvify.CommonPack.EF.Exceptions.Oracle.csproj
@@ -10,6 +10,12 @@
 
     <ItemGroup>
         <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.90" />
+        <PackageReference Include="Microsoft.CodeAnalysis" Version="4.7.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Compilers" Version="4.7.0" />
+        <PackageReference Include="Microsoft.Net.Compilers" Version="4.2.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
