--- a/test/Nuuvify.CommonPack.UnitOfWork.Oracle.xTest/Nuuvify.CommonPack.UnitOfWork.Oracle.xTest.csproj
+++ b/test/Nuuvify.CommonPack.UnitOfWork.Oracle.xTest/Nuuvify.CommonPack.UnitOfWork.Oracle.xTest.csproj
@@ -8,6 +8,12 @@
     <PackageReference Include="AutoMoqCore" Version="2.1.0" />
     <PackageReference Include="Bogus" Version="33.1.1" />
     <PackageReference Include="CountryData.Bogus" Version="3.61.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="4.7.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Compilers" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Net.Compilers" Version="4.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
