--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,12 +28,12 @@
 		// Se estiver utilizando Linux ou WSL2 desmarque essas linhas
 		"source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
 		"source=/${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,consistency=cached",
-		"source=/${localEnv:HOME}/.microsoft/usersecrets,target=/root/.microsoft/usersecrets,type=bind,consistency=cached"
+		"source=/${localEnv:HOME}/.config/.microsoft/usersecrets,target=/root/.config/.microsoft/usersecrets,type=bind,consistency=cached"
 		
 		// Se estiver usando Windows ou Docker Desktop, desmarque essas linhas
 		// "source=${localEnv:APPDATA}/NuGet/linux/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
 		// "source=${localEnv:USERPROFILE}/.ssh,target=/root/.ssh,type=bind,consistency=cached"
-		// "source=${localEnv:APPDATA}/Microsoft/UserSecrets,target=/root/.microsoft/usersecrets,type=bind,consistency=cached"
+		// "source=${localEnv:APPDATA}/Microsoft/UserSecrets,target=/root/.config/.microsoft/usersecrets,type=bind,consistency=cached"
 	],
 
 	"containerEnv": {
