--- a/src/Nuuvify.CommonPack.AutoHistory/Nuuvify.CommonPack.AutoHistory.csproj
+++ b/src/Nuuvify.CommonPack.AutoHistory/Nuuvify.CommonPack.AutoHistory.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Description>
       Essa biblioteca é uma extensão do EntityFrameworkCore para ser utilizado junto com UnitOfWork
       a fim de incluir na tabela AutoHistory, todas as alterações feitas em um registro em qualquer
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.32" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
