--- a/src/Nuuvify.CommonPack.EF.Exceptions.Common/Nuuvify.CommonPack.EF.Exceptions.Common.csproj
+++ b/src/Nuuvify.CommonPack.EF.Exceptions.Common/Nuuvify.CommonPack.EF.Exceptions.Common.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <PackageTags>EntityFramework EF Exception SqlServer PostgreSQL MySql EntityFrameworkCore
             entity-framework-core EFCore Data Database</PackageTags>
         <PackageReleaseNotes>Populate Entries property of the exceptions</PackageReleaseNotes>
@@ -16,7 +16,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     </ItemGroup>
 
 </Project>
