--- a/src/Nuuvify.CommonPack.EF.Exceptions.Oracle/Nuuvify.CommonPack.EF.Exceptions.Oracle.csproj
+++ b/src/Nuuvify.CommonPack.EF.Exceptions.Oracle/Nuuvify.CommonPack.EF.Exceptions.Oracle.csproj
@@ -2,20 +2,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <PackageTags>EntityFramework EF Oracle EntityFrameworkCore ODP.NET entity-framework-core EFCore Data Database</PackageTags>
         <PackageReleaseNotes>Populate Entries property of the exceptions</PackageReleaseNotes>
         <Description>Handle database errors easily when working with Entity Framework Core. Catch specific exceptions such as UniqueConstraintException, CannotInsertNullException, MaxLengthExceededException, NumericOverflowException or ReferenceConstraintException instead of generic DbUpdateException</Description>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.90" />
-        <PackageReference Include="Microsoft.CodeAnalysis" Version="4.7.0" />
-        <PackageReference Include="Microsoft.CodeAnalysis.Compilers" Version="4.7.0" />
-        <PackageReference Include="Microsoft.Net.Compilers" Version="4.2.0" Condition="'$(os)' == 'Windows_NT'" >
-        <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.130" />
     </ItemGroup>
 
     <ItemGroup>
