--- a/src/Nuuvify.CommonPack.HealthCheck/Nuuvify.CommonPack.HealthCheck.csproj
+++ b/src/Nuuvify.CommonPack.HealthCheck/Nuuvify.CommonPack.HealthCheck.csproj
@@ -2,15 +2,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Description>
       HealthChecks - Setup e configuracao do endpoint /hc-ui e /hc
     </Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.1.3" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI.SQLite.Storage" Version="3.1.2" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="8.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.SQLite.Storage" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup Label="Packaging">
