--- a/src/Nuuvify.CommonPack.Middleware.Abstraction/Nuuvify.CommonPack.Middleware.Abstraction.csproj
+++ b/src/Nuuvify.CommonPack.Middleware.Abstraction/Nuuvify.CommonPack.Middleware.Abstraction.csproj
@@ -15,8 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"
-      Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
