--- a/src/Nuuvify.CommonPack.Security.JwtStore.Ef/Nuuvify.CommonPack.Security.JwtStore.Ef.csproj
+++ b/src/Nuuvify.CommonPack.Security.JwtStore.Ef/Nuuvify.CommonPack.Security.JwtStore.Ef.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Description>
             Armazena a chave privada para geracao de token em banco de dados e fornece uma chave
             publica
@@ -12,7 +12,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     </ItemGroup>
 
     <ItemGroup>
