--- a/src/Nuuvify.CommonPack.Security/Nuuvify.CommonPack.Security.csproj
+++ b/src/Nuuvify.CommonPack.Security/Nuuvify.CommonPack.Security.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Description>
       Implementa Autorização e Autenticação com OAuth2, JWT - deve ser baixado no projeto IoC, aqui
       não contempla OpenId
@@ -11,17 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="3.1.32" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"
-      Version="3.1.32" />
-    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.32" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
+    <ProjectReference Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
   </ItemGroup>
 
   <ItemGroup>
