--- a/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
+++ b/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
@@ -15,14 +15,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.32" />
+    <!-- <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" /> -->
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
+    <ProjectReference Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
   </ItemGroup>
 
 </Project>
