--- a/test/Nuuvify.CommonPack.Security.xTest/Nuuvify.CommonPack.Security.xTest.csproj
+++ b/test/Nuuvify.CommonPack.Security.xTest/Nuuvify.CommonPack.Security.xTest.csproj
@@ -1,17 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.32" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\..\src\Nuuvify.CommonPack.Security\Nuuvify.CommonPack.Security.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Security\Nuuvify.CommonPack.Security.csproj" />
   </ItemGroup>
 
   <Target Name="CopyConfigFile" AfterTargets="AfterBuild">
