--- a/src/Nuuvify.CommonPack.Middleware/Nuuvify.CommonPack.Middleware.csproj
+++ b/src/Nuuvify.CommonPack.Middleware/Nuuvify.CommonPack.Middleware.csproj
@@ -2,7 +2,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <!-- <TargetFramework>netstandard2.0</TargetFramework> -->
+    <TargetFramework>net8.0</TargetFramework>
     <Description>
       Middlewares e filtros customizados, deve ser baixado no projeto IoC
       HandlingHeadersMiddleware - Inclui a versão da aplicação e do assembly no header da request,
@@ -13,8 +14,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <!-- <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" /> -->
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
