--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -9,6 +9,8 @@
     <IsTestProject>true</IsTestProject>
     <IsPublishable>false</IsPublishable>
     <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
+    <Nullable>disable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(OsPlatform) == 'Linux'">
