ajustes dos usings

--- a/src/Nuuvify.CommonPack.Middleware/Nuuvify.CommonPack.Middleware.csproj
+++ b/src/Nuuvify.CommonPack.Middleware/Nuuvify.CommonPack.Middleware.csproj
@@ -2,7 +2,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!-- <TargetFramework>netstandard2.0</TargetFramework> -->
     <TargetFramework>net8.0</TargetFramework>
     <Description>
       Middlewares e filtros customizados, deve ser baixado no projeto IoC
@@ -15,9 +14,8 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <!-- <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" /> -->
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.KeyPerFile" Version="8.0.7" />
   </ItemGroup>
 
   <ItemGroup>
