--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,8 +10,9 @@ ENV HTTPS_PROXY=$HttpProxyEnv
 ENV NO_PROXY=$NoProxyEnv
 
 RUN apt update -y && apt upgrade -y \
- && apt install -y unzip zip
+ && apt install -y unzip zip fzf
 
 ARG TZ=America/Sao_Paulo
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ >/etc/timezone
 
+RUN curl -s https://ohmyposh.dev/install.sh | bash -s
